--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NoteFlix</title>
+    <meta name="description" content="NoteFlix - Beautiful notes app for organizing your thoughts, ideas, and reminders with a stunning, intuitive interface." />
+    <meta name="theme-color" content="#3B82F6" />
+    <title>NoteFlix - Beautiful Notes, Organized Effortlessly</title>
+    <!-- Inter Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body data-theme="noteflix">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
