--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="NoteFlix - Beautiful notes app for organizing your thoughts, ideas, and reminders with a stunning, intuitive interface." />
     <meta name="theme-color" content="#3B82F6" />
-    <title>NoteFlix - Beautiful Notes, Organized Effortlessly</title>
+    <title>NoteFlix</title>
     <!-- Inter Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
